// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders DynamicLocation component 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <MapView
    provider="google"
    showsUserLocation={true}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <Callout
    style={
      Object {
        "bottom": 10,
        "position": "absolute",
        "right": 10,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Image
        source={1}
      />
    </View>
  </Callout>
</View>
`;

exports[`Should test for setState changes to locationChanged: Something Updated 1`] = `
Object {
  "alertIsLoading": true,
  "alertMarkers": Array [],
  "alertVisibility": true,
  "isLoading": true,
  "journeyDistance": null,
  "journeyTime": null,
  "location": Object {
    "coords": Object {
      "latitude": -0.09,
      "longitude": 51,
    },
  },
  "markers": Array [],
  "region": Object {
    "latitude": -0.09,
    "latitudeDelta": 0.1,
    "longitude": 51,
    "longitudeDelta": 0.05,
  },
}
`;

exports[`Should test for setState changes to locationChanged: something 1`] = `
Object {
  "alertIsLoading": true,
  "alertMarkers": Array [],
  "alertVisibility": true,
  "isLoading": true,
  "journeyDistance": null,
  "journeyTime": null,
  "location": Object {
    "coords": Object {
      "latitude": -0.09,
      "longitude": 51,
    },
  },
  "markers": Array [],
}
`;
